# LocalTranslate

./: .env.example  .gitignore  README.md  pyproject.toml
chrome_extension/: background.js  content_script.js  manifest.json  options.html  options.js  popup.html  popup.js  result.html  result.js  styles.css
docs/: handoff.md  phase-1-handoff.md
docs/superpowers/plans/: 2026-05-27-local-ollama-translation-service.md  2026-05-28-chrome-extension-local-translation.md  2026-05-28-local-web-translation-ui.md  2026-05-28-macos-one-click-deployment.md
docs/superpowers/specs/: 2026-05-27-local-ollama-translation-service-design.md  2026-05-28-chrome-extension-local-translation-design.md  2026-05-28-local-web-translation-ui-design.md  2026-05-28-macos-one-click-deployment-design.md
scripts/: install.sh  install_linux.sh  install_macos.sh  install_windows.ps1  uninstall_linux.sh  uninstall_macos.sh  uninstall_windows.ps1
tests/: test_api.py  test_chrome_extension.py  test_cli.py  test_config.py  test_cross_platform_scripts.py  test_languages.py  test_macos_scripts.py  test_mcp_server.py  test_ollama_client.py  test_prompt.py  test_service.py
translate_service/: __init__.py  cli.py  config.py  errors.py  language_data.tsv  languages.py  mcp_server.py  ollama_client.py  prompt.py  service.py
translate_service/api/: __init__.py  app.py  routes_system.py  routes_translate.py
translate_service/web/: __init__.py
translate_service/web/static/: app.js  index.html  styles.css
